Fixed top layout so not so much whitespace between main container and navigation bar

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -8,6 +8,6 @@
 
 @import "bootstrap";
 
-body { padding-top: 40px; }
+body { padding-top: 60px; }
 
 @import "bootstrap-responsive";
