--- a/app/assets/stylesheets/partials/_layout.css.scss
+++ b/app/assets/stylesheets/partials/_layout.css.scss
@@ -1,3 +1,7 @@
+#main-container {
+  margin-top: -20px;
+}
+
 .navbar {
   .brand {
     font-family: "Museo", "Helvetica Neue", Helvetica, Arial, sans-serif;
